--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <body>
     <noscript> <strong>We're sorry but vuecli3-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong> </noscript>
     <div id="app"></div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/canvas-nest.js/1.0.1/canvas-nest.min.js" color="255,220,0" opacity="0.7"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
