🎉 init: vue3 init

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>vuecli3-admin</title>
-  </head>
-  <body>
-    <noscript> <strong>We're sorry but vuecli3-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong> </noscript>
-    <div id="app"></div>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/canvas-nest.js/1.0.1/canvas-nest.min.js" color="255,220,0" opacity="0.7"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="icon" href="https://cdn.lipush.com/junbo/img/favicon.ico">
+	<link rel="stylesheet" href="https://cdn.lipush.com/junbo/css/base@1.0.0.css">
+	<title>创意管理平台</title>
+</head>
+
+<body>
+	<div id="app"></div>
+	<!-- built files will be auto injected -->
+</body>
+
 </html>
