--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="icon" href="https://cdn.lipush.com/junbo/img/favicon.ico">
 	<link rel="stylesheet" href="https://cdn.lipush.com/junbo/css/base@1.0.0.css">
-	<title>创意管理平台</title>
+	<title>后台管理系统</title>
 </head>
 
 <body>
