--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,21 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="https://cdn.lipush.com/junbo/img/favicon.ico">
-	<link rel="stylesheet" href="https://cdn.lipush.com/junbo/css/base@1.0.0.css">
+	<link rel="icon" href="./favicon.ico">
+	<% if (process.env.NODE_ENV === 'production') { %>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-plus@1.2.0-beta.3/dist/index.css">
+	<% } %>
 	<title>后台管理系统</title>
 </head>
 
 <body>
 	<div id="app"></div>
+	<% if (process.env.NODE_ENV === 'production') { %>
+	<script src="https://cdn.jsdelivr.net/npm/vue@3.2.22/dist/vue.global.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue-router@4.0.12/dist/vue-router.global.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vuex@4.0.2/dist/vuex.global.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/element-plus@1.2.0-beta.3/dist/index.full.min.js"></script>
+	<% } %>
 	<!-- built files will be auto injected -->
 </body>
 
