--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/vue@3.2.22/dist/vue.global.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue-router@4.0.12/dist/vue-router.global.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vuex@4.0.2/dist/vuex.global.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/element-plus@1.2.0-beta.3/dist/index.full.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/element-plus@2.1.4/dist/index.full.min.js"></script>
 	<% } %>
 	<!-- built files will be auto injected -->
 </body>
